# course_cpp

./: Box.cpp  CMakeLists.txt  main.cpp
Clase 1/rol/: Box.h
Clase 1/rol/characters/: Character.cpp  CharacterEnemy.cpp  CharacterEnemy.h  Person.cpp  Person.h  TypeEnemies.h  TypePerson.h
Clase 1/rol/persons/: Character.h
Clase 2/argumentos_predeterminados/: CMakeLists.txt  main.cpp
Clase 2/arrays/: CMakeLists.txt  main.cpp
Clase 2/conversiones/: CMakeLists.txt  main.cpp
Clase 2/funciones/: CMakeLists.txt  Calculadora.h  main.cpp
Clase 2/lambdas/: CMakeLists.txt  main.cpp
Clase 2/plantillas_funciones/: CMakeLists.txt  main.cpp
Clase 2/punteros/: CMakeLists.txt  main.cpp
Clase 2/sobrecargas_funciones/: CMakeLists.txt  main.cpp
Clase 3/lambdas/: CMakeLists.txt  main.cpp
Clase 3/lambdas2/: CMakeLists.txt  main.cpp
Clase 3/stl/: CMakeLists.txt  main.cpp
Clase 3/stl2/: Alumno.h  CMakeLists.txt  Comparador.h  main.cpp
Clase 4/concepts/: CMakeLists.txt  main.cpp
Clase 4/functors/: Account.cpp  Account.h  AccountPrivate.cpp  AccountPrivate.h  CMakeLists.txt  Clientes.cpp  Clientes.h  Funtor.cpp  Funtor.h  Point.cpp  Point.h  main.cpp
Clase 4/multihilo/: CMakeLists.txt  main.cpp
Clase 4/ranges/: CMakeLists.txt  Persona.h  Vehiculo.h  main.cpp
Ejemplos/sqlite/: CMakeLists.txt  main.cpp
Ejemplos/sqlite/utils/bd/: Sqlite.cpp  Sqlite.h
Ejemplos/sqlite/utils/logger/: Colors.h  Logger.cpp  Logger.h
characters/: Character.h  TypeHeroes.h
persons/: Character.cpp
